@@ -1422,7 +1422,7 @@ PORT gbz80_port =
     NULL,
     NULL,
     NULL,
-    NULL,
+    z80notUsed,
     z80canAssign,
     NULL,
     z80symmParmStack,
